# ipia

./: .gitignore  CMakeLists.txt  README.md  implicit-curvatures.hh  ipia-test.cc  ipia.cc  ipia.hh
